--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
       <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>antlr4</artifactId>
+      <version>4.13.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -49,6 +54,28 @@
         <groupId>net.revelc.code.formatter</groupId>
         <artifactId>formatter-maven-plugin</artifactId>
         <version>2.23.0</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.antlr</groupId>
+        <artifactId>antlr4-maven-plugin</artifactId>
+        <version>4.13.1</version>
+        <configuration>
+          <!--<listener>true</listener>
+          <visitor>true</visitor>-->
+          <outputDirectory>${project.build.directory}/generated-sources/antlr4/org/contractlib/antlr4parser</outputDirectory>
+          <arguments>
+            <argument>-package</argument>
+            <argument>org.contractlib.antlr4parser</argument>
+          </arguments>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>antlr4</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
