--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>jmlparser-core</artifactId>
       <version>3.25.10-b6-SNAPSHOT</version>
     </dependency>
+    <!--
+    <dependency>
+      <groupId>org.key-project</groupId>
+      <artifactId>key.core</artifactId>
+      <version>2.12.2</version>
+    </dependency>-->
   </dependencies>
 
   <build>
